modefien on content

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body class="img-fluid">
     <!-- Start Navbar -->
     <main class="body">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top pb-4">
             <div class="container">
                 <a class="navbar-brand" href="./index.html">
                    <h1>MaLa3iiB</h1> 
@@ -44,10 +44,10 @@
                             <a class="nav-link mr-4" href="#about">A propos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link mr-4" href="#">Contact</a>
+                            <a class="nav-link mr-4" href="#contact">Contact</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="#reserver">Réserver<span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="./reserver.html">Réserver<span class="sr-only">(current)</span></a>
                         </li>
 
                     </ul>
@@ -77,7 +77,7 @@
             <div class="container">
                 <div class="terrain">
                     <h1>les terrains</h1>
-                    <p>This is a wider card with supporting text below</p>
+                    <p>Stades de haute qualité avec éclairage de nuit</p>
                 </div>
                 <div class="row">
                     <!-- stade 1 -->
@@ -139,10 +139,9 @@
                 <img src="./imges/team.jpg" class="img-fluid" alt="reserver">
             </div>
             <div class="content">
-                <h1>Be a part of the great story</h1>
-                <P>This is a wider card with supporting text below</P>
+                <h1>réservation</h1>
+                <P>Réservez votre terrain et venez vous affronter durant un match d'une heure ou plus !</P>
             </div>
-
             <a class="btn btn-reserve" href="./reserver.html">RÉSERVER</a>
         </div>
 
@@ -153,27 +152,27 @@
             <div class="container">
                 <div class="definition">
                     <h1>a propos</h1>
-                    <p>This is a wider card with supporting text below</p>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum rerum nostrum ipsum hic,
-                        repudiandae ea quas cum sit commodi incidunt corrupti recusandae quaerat eius. Unde amet
-                        asperiores sequi voluptate illo.</p>
+                    <p>Envie de jouer au foot ? Vous êtes particulier, société…Réservez votre terrain chez "MALA3IIB"</p>
+                    <p>"MALA3IIB" propose aux amoureux du ballon rond de venir à sa découverte avec ses formules dédiées aux amateurs de football. Des locations de terrain de football en gazon synthétique pour 10 joueurs attendent les intéresses pour se défouler et s’amuser entre amis.     1 heure de location de terrain pour 10 personnes chez "MALA3IIB" Une partie de Football en 5vs5 entre amis. Les amoureux du foot pourront profiter le temps d’un match, d’une ambiance conviviale et de l’esprit d’équipe qui règne sur ce jeu. Entre collègues, amis ou famille, les intéressés passeront un moment footballistique.</p>
                 </div>
             </div>
         </div>
         <!-- Start A PROPOS-->
 
         <!-- Start Footer-->
-        <footer class="footer">
+        <footer id="contact" class="footer">
             <div class="container">
                 <div class="row">
                     <div class="col-md-4">
                         <div class="site-info">
                             <a class="navbar-brand" href="#">
-                                <h2>MaLa3iiB</h2>
+                                <h1 class="text-light">maLa3iib</h1>
                             </a>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet eveniet rem tempora
-                                debitis praesentium itaque nihil.
+                                Constituez vous 2 équipes de foot, 
+                                contactez-nous ou réserver votre terrain dans website 
+                                et venez vous affronter durant un match d’une heure 
+                                ou plus au plein ciel paradise foot.
                             </p>
                         </div>
 
