--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Mala3iib</title>
+    <link rel="icon" href="./imges/kora.png" type="image" sizes="16x16">
+
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <!-- Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
