--- a/reserver.html
+++ b/reserver.html
@@ -4,7 +4,7 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Mala3iib</title>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="icon" href="./imges/kora.png" type="image" sizes="16x16">
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <!-- Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
